<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetallesActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_mascota"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03"
        android:id="@+id/txvNombre"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:src="@mipmap/perro_max"
        android:contentDescription="@string/foto_mascota"
        app:layout_constraintTop_toBottomOf="@id/txvNombre"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/imgMascota"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/razaD"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/imgMascota"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:id="@+id/txvRaza"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edad_mascota"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/txvRaza"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:id="@+id/txvEdad"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/espacio"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@id/txvEdad"
        app:layout_constraintLeft_toRightOf="@id/txvEdad"
        android:layout_marginStart="5dp"
        android:id="@+id/txvSeparacion"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genero"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@id/txvEdad"
        app:layout_constraintLeft_toRightOf="@id/txvEdad"
        android:layout_marginStart="15dp"
        android:id="@+id/txvGenero"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ubicacion"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/txvEdad"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:id="@+id/txvUbicacion"
        />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/txvUbicacion"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/txvUbicacion"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:id="@+id/txvColor"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripcion"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/txvColor"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:id="@+id/txvDescripcion"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiero_adoptar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txvDescripcion"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/primario"
        android:id="@+id/btnAdoptar"
        />



</androidx.constraintlayout.widget.ConstraintLayout>