<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormularioActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingrese"
        android:textSize="28sp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:id="@+id/ingrese"
        />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="140dp"
        android:src="@mipmap/imagen"
        android:contentDescription="@string/inserta"
        app:layout_constraintTop_toBottomOf="@id/ingrese"
        app:layout_constraintStart_toStartOf="@id/ingrese"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:id="@+id/inserta"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/botonFoto"
        android:text="Foto"
        app:layout_constraintTop_toBottomOf="@id/inserta"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@id/inserta"
        android:layout_marginLeft="15dp"
        android:backgroundTint="@color/primario"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        android:autofillHints="@string/nombre"
        android:ems="11"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/ingrese"
        app:layout_constraintLeft_toRightOf="@id/inserta"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:id="@+id/EdNombre"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/razaD"
        android:autofillHints="@string/razaD"
        android:ems="11"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/EdNombre"
        app:layout_constraintLeft_toRightOf="@id/inserta"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:id="@+id/EdRaza"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edad_mascota"
        android:autofillHints="@string/edad_mascota"
        android:ems="11"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/EdRaza"
        app:layout_constraintLeft_toRightOf="@id/inserta"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:id="@+id/EdEdad"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/descripcion"
        android:autofillHints="@string/descripcion"
        android:ems="18"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/botonFoto"
        android:layout_marginTop="10dp"
        android:id="@+id/EdDescripcion"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/ubicacion"
        android:autofillHints="@string/ubicacion"
        android:ems="18"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EdDescripcion"
        android:layout_marginTop="10dp"
        android:id="@+id/EdtLugar"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/EdtLugar"
        android:layout_marginTop="15dp"
        android:id="@+id/usuario"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        android:autofillHints="@string/nombre"
        android:ems="12"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usuario"
        android:layout_marginTop="10dp"
        android:id="@+id/EdtNombreU"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/correo"
        android:autofillHints="@string/correo"
        android:ems="12"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EdtNombreU"
        android:layout_marginTop="10dp"
        android:id="@+id/EdtCorreoU"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/telefono"
        android:autofillHints="@string/telefono"
        android:ems="12"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EdtCorreoU"
        android:layout_marginTop="10dp"
        android:id="@+id/EdtTelefonoU"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enviar"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/EdtTelefonoU"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/primario"
        android:id="@+id/enviar"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:textSize="20dp"
        app:layout_constraintBaseline_toBaselineOf="@id/enviar"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/primario"
        android:id="@+id/cancelar"
        />


</androidx.constraintlayout.widget.ConstraintLayout>