<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".05"
        android:id="@+id/txvBienvenido"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@mipmap/adoptar"
        android:contentDescription="@string/img_adoptar"
        android:scaleType="centerInside"
        android:background="#A77C34"
        app:layout_constraintTop_toBottomOf="@id/txvBienvenido"
        android:layout_marginTop="50dp"
        android:id="@+id/imbAdoptar"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@mipmap/dar"
        android:contentDescription="@string/img_dar"
        android:scaleType="centerInside"
        android:background="#A77C34"
        app:layout_constraintTop_toBottomOf="@id/imbAdoptar"
        android:layout_marginTop="50dp"
        android:id="@+id/imbDar"
        />

</androidx.constraintlayout.widget.ConstraintLayout>