<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="99dp"
    android:orientation="vertical"
    android:layout_margin="2dp"
    app:cardBackgroundColor="@color/primario"
    app:cardCornerRadius="16dp"
    app:cardElevation="2dp"
    app:contentPadding="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@mipmap/perrito"
            android:contentDescription="@string/imagen"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="10dp"
            android:background="@color/white"
            android:id="@+id/imagen"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombreM"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="3dp"
            android:layout_marginStart="12dp"
            android:id="@+id/nombre"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/raza"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/nombre"
            app:layout_constraintLeft_toLeftOf="@id/nombre"
            app:layout_constraintRight_toRightOf="@id/nombre"
            android:layout_marginTop="3dp"
            android:id="@+id/raza"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edad"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/raza"
            app:layout_constraintLeft_toLeftOf="@id/raza"
            app:layout_constraintRight_toRightOf="@id/raza"
            android:layout_marginTop="3dp"
            android:id="@+id/edad"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>